--- a/Task 1-Portfolio/index.html
+++ b/Task 1-Portfolio/index.html
@@ -60,7 +60,7 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://https://www.linkedin.com/in/ayo-hassan-a11734262/'"
+            onclick="location.href='https://linkedin.com/in/ayo-hassan-a11734262/'"
           />
           <img
             src="./assets/github.png"
